# alers

./: .gitignore  Cargo.toml  README.md  build.rs  cylinder_rig.fbx
.github/workflows/: rust.yml
crates/ale_app/: Cargo.toml
crates/ale_app/src/: app.rs  before_tick.rs  command.rs  display.rs  display_info.rs  engine.rs  event.rs  fixed_tick.rs  input_translator.rs  lib.rs  tick.rs  visitor.rs  window.rs
crates/ale_autoid/: Cargo.toml
crates/ale_autoid/src/: lib.rs
crates/ale_buffer/: Cargo.toml
crates/ale_buffer/src/: lib.rs
crates/ale_camera/: Cargo.toml
crates/ale_camera/src/: component.rs  fly_camera.rs  flycamera.rs  lib.rs
crates/ale_console/: Cargo.toml
crates/ale_console/src/: backend.rs  lib.rs
crates/ale_data/: Cargo.toml
crates/ale_data/src/: alevec.rs  cachedvec.rs  channel.rs  indexmap.rs  lib.rs  timer.rs
crates/ale_data/src/entity/: entry.rs  mod.rs
crates/ale_data/src/queue/: fast.rs  local.rs  mod.rs
crates/ale_ecs/: Cargo.toml
crates/ale_error/: Cargo.toml
crates/ale_error/src/: lib.rs
crates/ale_event/: Cargo.toml
crates/ale_font/: Cargo.toml
crates/ale_font/src/: lib.rs
crates/ale_glfw/: Cargo.toml
crates/ale_gltf/: Cargo.toml
crates/ale_gltf/src/: lib.rs
crates/ale_gltf/test_resources/: standard.gltf
crates/ale_input/: Cargo.toml
crates/ale_material/: Cargo.toml
crates/ale_material/src/: lib.rs
crates/ale_math/: Cargo.toml
crates/ale_mesh/: Cargo.toml
crates/ale_mesh/src/: buffer.rs  iter.rs  lib.rs  sdf.rs
crates/ale_opengl/: Cargo.toml
crates/ale_opengl/resources/: fxaa.frag  render_frame.frag  text_2d.vert
crates/ale_opengl/src/: console.rs  constant.rs  envmap.rs  lib.rs  mesh.rs  pbr.rs  postprocess.rs  raw.rs  raymarch.rs  render_frame.rs  renderer.rs  resource_pile.rs  shader.rs  text.rs  texture.rs  ui.rs  viewport.rs  wire.rs
crates/ale_opengl/src/debug/: line.rs
crates/ale_opengl/src/new/: mod.rs  text.rs
crates/ale_opengl/src/old/: constant.rs  cubemap.rs  mod.rs  opengl.rs  sky.rs  texture.rs
crates/ale_opengl/src/old/entity/: camera.rs  pawn.rs  skybox.rs  world.rs
crates/ale_opengl/src/renderer/: mod.rs  renderframe.rs  sprite.rs  task.rs  text.rs  viewport.rs
crates/ale_opengl_debug/: Cargo.toml
crates/ale_opengl_envmap/: Cargo.toml
crates/ale_opengl_envmap/resources/: irradiance.frag
crates/ale_opengl_envmap/src/: lib.rs
crates/ale_opengl_fxaa/: Cargo.toml
crates/ale_opengl_fxaa/resources/: fxaa.frag  fxaa.vert
crates/ale_opengl_fxaa/src/: lib.rs
crates/ale_opengl_pbr/: Cargo.toml
crates/ale_opengl_pbr/src/: lib.rs
crates/ale_physics/: Cargo.toml
crates/ale_physics/src/: lib.rs
crates/ale_raymarch/: Cargo.toml
crates/ale_raymarch/src/: lib.rs
crates/ale_render/: Cargo.toml
crates/ale_render/src/: component.rs  lib.rs  renderer.rs  target.rs
crates/ale_renderer/: Cargo.toml
crates/ale_resource/: Cargo.toml
crates/ale_resources/: Cargo.toml
crates/ale_resources/src/: autoid.rs  buffer.rs  font.rs  gltf.rs  lib.rs  mesh.rs  path.rs  resources.rs  shader.rs  stash.rs  texture.rs
crates/ale_resources/src/mesh/: iter.rs  sdf.rs
crates/ale_shader/: Cargo.toml
crates/ale_texture/: Cargo.toml
crates/ale_texture/src/: envmap.rs  lib.rs
crates/ale_ui/: Cargo.toml
crates/ale_ui/src/: button.rs  element.rs  empty.rs  layout.rs  lib.rs  panels.rs  text.rs  ui.rs
crates/ale_variable/: Cargo.toml
crates/ale_wgpu/: Cargo.toml
crates/ale_wgpu/src/: backend.rs  lib.rs  render_pipeline.rs  sprite_renderer.rs
crates/ale_window/: Cargo.toml
crates/ale_window/src/: backend.rs  display.rs  lib.rs  tick.rs  window.rs
crates/ale_window_winit/: Cargo.toml
crates/ale_window_winit/src/: backend.rs  display.rs  event_loop.rs  input_translator.rs  lib.rs  window.rs
crates/ale_world/: Cargo.toml
crates/ale_world/src/: components.rs  engine.rs  event.rs  events.rs  lib.rs  registry.rs  viewport.rs  visitor.rs  world.rs
crates/ale_world/src/event/: mod.rs  stream.rs  world.rs
crates/ale_world/src/typecast/: entry.rs  mod.rs  registry.rs
examples/complete/: Cargo.toml
examples/complete/resources/: scene.gltf
examples/complete/src/: game.rs  main.rs
examples/ecs/: Cargo.toml
examples/editor/: Cargo.toml
examples/editor/src/: main.rs
examples/editor/src/scene/: camera.rs
examples/editor/src/ui/: main_frame.rs  mod.rs  viewport.rs
examples/gpu_sdf/: Cargo.toml
examples/pong/: Cargo.toml
examples/pong/src/: main.rs
examples/sdf/: Cargo.toml
examples/sdf/src/: main.rs
examples/tetris/: Cargo.toml
examples/ui/: Cargo.toml
examples/ui/src/: main.rs
games/: Cargo.toml
games/shaders/: sprite.vs
games/src/: main.rs
resources/gltf/: bakso.gltf  sphere.gltf  triangle.glb
resources/shaders/: equirect.frag  pbr.frag  skybox.vert  text_2d.frag  text_2d.vert  ui.frag  ui.vert  wire.frag
resources/test/: anim_begin.blend  anim_begin.blend1  anim_begin.fbx  anim_simple.fbx  basic_blender.fbx  cube.fbx  cylinder_rig.blend  cylinder_rig.fbx  ngon.fbx  plane.fbx  scene.fbx  smooth_sphere.fbx  spheres.fbx  spheres_shade.fbx  triangle.blend  triangle.fbx
shaders/: cubemap.vert  equirect.frag  equirect.vert  irradiance.frag  lambert.frag  lambert.fs  lambert.vert  lambert.vs  particle.vs  pbr.frag  pbr.vert  postprocess.fs  postprocess.vs  skybox.frag  sprite.fs  ui.frag  wire.frag  wire.vert
shaders/sky/: sky.vert
snippets/: unelided_timer.rs
src/: lib.rs  main.rs
src/ale/: fixed_step_tick.rs  font.rs  idgen.rs  input.rs  mod.rs  particle.rs  scene.rs  ticker.rs  time.rs  world_state.rs
src/app/: bin.rs  complete.rs  example.rs  game.rs  objects.rs  pile.rs
src/audio/: mod.rs
src/fisika/: mod.rs
src/game/: ball.rs  block.rs  breakout.rs  mod.rs  paddle.rs
src/graphics/: font.rs  job.rs  opengl.rs  shader.rs  state.rs
src/input/: mod.rs
src/lib/: audio.rs  camera.rs  data.rs  engine.rs  entity.rs  input.rs  lib.rs  log.rs  macros.rs  math.rs  renderer.rs  resource.rs  ui.rs  window.rs
src/math/: mod.rs
src/renderer/: job.rs  mod.rs  opengl.rs  shader.rs  state.rs
src/resource/: mod.rs
(+100 files in other folders)
