[package]
name = "alers"
version = "0.1.1"
authors = ["Alether <gotenwinz99@gmail.com>"]
edition = "2018"

[lib]
name = "alers"
path = "src/lib/lib.rs"

[[bin]]
name = "bin"
path = "src/app/bin.rs"

[target.'cfg(windows)'.dependencies.glfw]
version = "0.34.0"
git = "https://github.com/bjz/glfw-rs.git"
default-features = false

[target.'cfg(unix)'.dependencies.glfw]
version = "0.34.0"
git = "https://github.com/bjz/glfw-rs.git"

[dependencies.async-std]
version = "1.0.0"
features = ["attributes"]

[dependencies]
fbxcel-dom = "0.0.4"
cgmath = "0.14.1"
gl = "0.6.2"
image = "0.23.0-preview.0"
time = "0.1"
rand = "0.3"
rodio = "0.5.2"
rusttype = "0.3.0"
unicode-normalization = "0.1.0"
simplelog = "0.7.4"
log = "0.4.8"
approx = "0.3.2"
snowflake = "1.2"
bitflags = "1.2.1"
hdrldr = "0.1"