[package]
name = "alers"
version = "0.1.1"
authors = ["Alether <gotenwinz99@gmail.com>"]
edition = "2018"

[lib]
name = "alers"
path = "src/lib/lib.rs"

[[bin]]
name = "bin"
path = "src/app/bin.rs"

[target.'cfg(windows)'.dependencies.glfw]
version = "0.34.0"
git = "https://github.com/bjz/glfw-rs.git"
default-features = false

[target.'cfg(unix)'.dependencies.glfw]
version = "0.34.0"
git = "https://github.com/bjz/glfw-rs.git"

[dependencies.async-std]
version = "1.0.0"
features = ["attributes"]

[dependencies.gltf]
version = "0.15"
features = ["extras", "names"]

[dependencies]
ale_gltf = { path = "crates/ale_gltf" }
ale_mesh = { path = "crates/ale_mesh" }
ale_autoid = { path = "crates/ale_autoid" }
ale_math = { path = "crates/ale_math" }
ale_font = { path = "crates/ale_font" }
ale_opengl = { path = "crates/ale_opengl" }
ale_texture = { path = "crates/ale_texture" }
fbxcel-dom = "0.0.4"
cgmath = "0.17.0"
time = "0.1"
rand = "0.3"
rodio = "0.5.2"
rusttype = "0.3.0"
unicode-normalization = "0.1.0"
simplelog = "0.7.4"
log = "0.4.8"
approx = "0.3.2"
bitflags = "1.2.1"