[package]
name = "alers"
version = "0.1.1"
authors = ["Alether <gotenwinz99@gmail.com>"]
edition = "2018"

[[bin]]
name = "bin"
path = "src/app/bin.rs"

[dependencies.async-std]
version = "1.0.0"
features = ["attributes"]

[dependencies.gltf]
version = "0.15"
features = ["extras", "names"]

[dependencies]
ale_app = { path = "crates/ale_app" }
ale_gltf = { path = "crates/ale_gltf" }
ale_mesh = { path = "crates/ale_mesh" }
ale_autoid = { path = "crates/ale_autoid" }
ale_math = { path = "crates/ale_math" }
ale_font = { path = "crates/ale_font" }
ale_opengl = { path = "crates/ale_opengl" }
ale_texture = { path = "crates/ale_texture" }
ale_camera = { path = "crates/ale_camera" }
ale_shader = { path = "crates/ale_shader" }
ale_input = { path = "crates/ale_input" }
ale_console = { path = "crates/ale_console" }
ale_variable = { path = "crates/ale_variable" }
ale_opengl_fxaa = { path = "crates/ale_opengl_fxaa" }
time = "0.1"
rand = "0.3"
rodio = "0.5.2"
rusttype = "0.3.0"
unicode-normalization = "0.1.0"
approx = "0.3.2"