[package]
name = "ale_app"
version = "0.1.0"
authors = ["Andreas Terrius <andreas.terrius@gmail.com>"]
edition = "2018"

[dependencies]
ale_math = { path = "../ale_math" }
ale_input = { path = "../ale_input" }
ale_opengl = { path = "../ale_opengl" }
ale_ui = { path = "../ale_ui" }
ale_world = { path = "../ale_world" }
ale_resources = { path = "../ale_resources" }
ale_window = { path = "../ale_window" }
simplelog = "0.7.4"
log = "0.4.8"
thiserror = "1.0"
anyhow = "1.0"