[package]
name = "ale_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
snowflake = "1.3.0"
lazy_static = "1.4.0"
indexmap = "1.9.1"
crossbeam-channel = "0.5.6"

[dependencies.traitcast_core]
version = "0.2.0"
use_inventory = false
