[package]
name = "ale_font"
version = "0.1.0"
authors = ["Andreas Terrius <andreas.terrius@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusttype = "0.9.2"
ale_texture = { path = "../ale_texture" }
ale_math = { path = "../ale_math" }
