[package]
name = "ale_opengl"
version = "0.1.0"
authors = ["Andreas Terrius <andreas.terrius@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ale_autoid = { path = "../ale_autoid" }
ale_font = { path = "../ale_font" }
ale_math = { path = "../ale_math" }
ale_mesh = { path = "../ale_mesh" }
ale_texture = { path = "../ale_texture" }
ale_shader = { path = "../ale_shader" }
ale_camera = { path = "../ale_camera" }
ale_console = { path = "../ale_console" }
ale_variable = { path = "../ale_variable" }
ale_resource = { path = "../ale_resource" }
ale_ecs = { path = "../ale_ecs" }
ale_material = { path = "../ale_material" }
gl = "0.6.2"
parking_lot = "0.11.1"
downcast-rs = "1.2.0"