[package]
name = "ale_opengl"
version = "0.1.0"
authors = ["Andreas Terrius <andreas.terrius@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ale_resources = { path = "../ale_resources" }
ale_math = { path = "../ale_math" }
ale_camera = { path = "../ale_camera" }
ale_console = { path = "../ale_console" }
ale_variable = { path = "../ale_variable" }
ale_input = { path = "../ale_input" }
gl = "0.14.0"