[package]
name = "ale_opengl_pbr"
version = "0.1.0"
authors = ["Andreas Terrius <andreas.terrius@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ale_variable = { path = "../ale_variable" }
ale_opengl = { path = "../ale_opengl" }
ale_shader = { path = "../ale_shader" }
ale_mesh = { path = "../ale_mesh" }
ale_opengl_envmap = { path = "../ale_opengl_envmap" }
ale_camera = { path = "../ale_camera" }
ale_math = { path = "../ale_math" }