[package]
name = "ale_physics"
version = "0.1.0"
authors = ["Andreas Terrius <andreas.terrius@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rapier3d = { version = "0.8.0", features = [ "simd-stable", "parallel" ] }
ale_math = { path = "../ale_math" }