[package]
name = "ale_raymarch"
version = "0.1.0"
authors = ["Andreas Terrius <andreas.terrius@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ale_mesh = { path = "../ale_mesh" }
ale_texture = { path = "../ale_texture" }
ale_camera = { path = "../ale_camera" }