[package]
name = "ale_render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ale_opengl = { path = "../ale_opengl" }
ale_ui = { path = "../ale_ui" }
ale_resources = { path = "../ale_resources" }
ale_window = { path = "../ale_window" }
ale_math = { path = "../ale_math" }
ale_data = { path = "../ale_data" }