[package]
name = "ale_resources"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ale_math = { path = "../ale_math" }
ale_data = { path = "../ale_data" }
snowflake = "1.3.0"
approx = "0.5.1"
rusttype = "0.9.2"
gltf = "1.0.0"
hdrldr = "0.1.2"
image = "0.24.2"
thiserror = "1.0"
log = "0.4.17"