[package]
name = "ale_texture"
version = "0.1.0"
authors = ["Andreas Terrius <andreas.terrius@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ale_autoid = { path = "../ale_autoid" }
ale_resource = { path = "../ale_resource" }
hdrldr = "0.1"
image = "0.23.*"