[package]
name = "ale_window"
version = "0.1.0"
edition = "2021"

[dependencies]
ale_math = { path = "../ale_math" }
ale_input = { path = "../ale_input" }
ale_opengl = { path = "../ale_opengl" }
ale_ui = { path = "../ale_ui" }
ale_data = { path = "../ale_data" }
simplelog = "0.7.4"
log = "0.4.8"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.'cfg(windows)'.dependencies.glfw]
version = "0.45.0"
git = "https://github.com/bjz/glfw-rs.git"
default-features = false

[target.'cfg(unix)'.dependencies.glfw]
version = "0.45.0"
git = "https://github.com/bjz/glfw-rs.git"