[package]
name = "ale_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ale_input = { path = "../ale_input" }
hecs = "0.7.6"
inventory = "0.1.*"

[dependencies.traitcast_core]
version = "0.2.0"
use_inventory = false