[package]
name = "ale_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ale_input = { path = "../ale_input" }
ale_camera = { path = "../ale_camera" }
ale_opengl = { path = "../ale_opengl" }
ale_data = { path = "../ale_data" }
downcast-rs = "1.2.0"
anyhow = "1.0.58"

[dependencies.traitcast_core]
version = "0.2.0"
use_inventory = false
