[package]
name = "pong"
version = "0.1.0"
authors = ["Andreas Terrius <andreas.terrius@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ale_app = { path = "../../crates/ale_app" }
ale_opengl = { path = "../../crates/ale_opengl" }
ale_math = { path = "../../crates/ale_math" }
ale_physics = { path = "../../crates/ale_physics" }
ale_camera = { path= "../../crates/ale_camera" }
ale_input = { path= "../../crates/ale_input" }
ale_resources = { path = "../../crates/ale_resources" }
rand = "0.8.3"