[package]
name = "sdf"
version = "0.1.0"
authors = ["Andreas Terrius <andreas.terrius@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ale_app = { path = "../../crates/ale_app" }
ale_math = { path = "../../crates/ale_math" }
ale_mesh = { path = "../../crates/ale_mesh" }
ale_opengl = { path = "../../crates/ale_opengl" }
ale_input = { path = "../../crates/ale_input" }
ale_gltf = { path = "../../crates/ale_gltf" }
ale_camera = { path = "../../crates/ale_camera" }
ale_texture = { path = "../../crates/ale_texture" }