[package]
name = "sdf"
version = "0.1.0"
authors = ["Andreas Terrius <andreas.terrius@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ale_app = { path = "../../crates/ale_app" }
ale_math = { path = "../../crates/ale_math" }
ale_opengl = { path = "../../crates/ale_opengl" }
ale_input = { path = "../../crates/ale_input" }
ale_camera = { path = "../../crates/ale_camera" }
ale_raymarch = { path = "../../crates/ale_raymarch" }
ale_resources = { path = "../../crates/ale_resources" }
ale_window = { path = "../../crates/ale_window" }